 - Pull Request #782 - If we recieve a UPDATE_STATE_NEW_ID_ASSIGNED and the Old and New NodeID's 
   are the same, don't reinitialize the Node from KillerCode (Justin)
 - Issue #774 - Improve support for Aeotec Double Smart switch from dnpwwo (Justin)
 - Issue #796 - Fix NotifyWatchers not releasing Value References from jmattoni (Justin)

Version 1.4
 - Released 10th Jan, 2016

Version 1.3
 - Added support for Merten Plug-in Roller Shutter Module (Marco)
 - Fixed Issue 383 - Update Remotec ZXT-120 Config file thanks to yy.bendavid & gizmocuz (Alex)
 - Fixed Issue 392 - Add Qubino ZMNHJA2 Config file thanks to nicoserveur (Alex)
 - Fixed Issue 394 - Add 2GIG CT100 USA version device thanks to mldkfa (Alex)
 - Fixed Issue 387 - Add Zipato RFID Config file thanks to jeanfrancois.auger (Alex)
 - Fixed Issue 391 - Update zwave.key keyfob config thanks to gizmocuz (Alex)
 - Fixed Issue 397 - Update remotec ZXT-120 config thanks to gizmocuz (Alex)
 - Fixed Issue 396 - Add Z-Wave.me RaZberry thanks to steph10200 (Alex)
 - Fixed Issue 398 - Add Z-Wave.me USB Stick thanks to ugo.viti (Alex)
 - Fixed Issue 389 - Add Evolve LRM-AS/LSM-15 Config file thanks to Gwmullin (Alex)
 - Fixed Issue 386 - Add Duwi and Z-Wave.Me Config files thanks to pim.vanderhaven (Alex)
 - Fixed Issue 401 - Add Toon/Quby devices (Alex)
 - Added new manufacturers and new devices (Alex)
 - Add Wenzhou TSP01 Config file thanks to Jan (Alex)
 - Standardize some of the Logging Messages so its easier to parse (Justin)
 - Implemented Issue 325 - Add a GetChangeVerfied method to the Manager and Value classes to
   determine if a Value is checked upon refresh from a device (Justin)
 - Fixed issue 350 - FreeBSD Makefile updates and a few patches (Justin)
 - Fixed issue 395 - Clear the ListItems Vector before populating with new
   values (Justin)
 - Fixed issue 402 - Clean vers.cpp when we issue a make clean (Justin)
 - Fixed issue 405 - Add new ID's for Fibaro FGD211 and FGS221 (Justin)